harness/test/errors/073_sprintf_hint.eu
# Mistake: using sprintf for string formatting — not available in eucalypt
name: "Alice"
greeting: sprintf("Hello, %s!", name)
